--- a/index.html
+++ b/index.html
@@ -2,10 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> Temporary Home Page </title>
+<title> Whitewater Rafting Vacations | Dry Oar Boating | Home </title>
 </head>
 <body>
-<h1> Maggieklinke.github.io </h1>
-<p> hi hi </p>
+
+<img src="/Users/maggieklinke/Documents/College/Idaho/Fall 2016/WDD 100/template.png" alt="logo" height="100" width="115">
+<ul> 
+<li> Home </li>
+<li> Rivers </li>
+<li> FAQ </li>
+<li> Blog </li>
+<li> Rates/Dates </li>
+<li> Contact Us </li>
+</ul>
+<img src = "http://brothert.net/dryoar/images/river-narrow.jpg" alt = "header image">
+<h1> We run Rivers to relax </h1>
+<p>
+We believe that there is nothing like a river trip for relaxing. That is why we subscribe to the dry oar philosophy of boating.
+Keeping your oars dry for us means taking time to look around and notice the beauty that surrounds the rivers we love.
+</p>
+<img src = "http://brothert.net/dryoar/images/salmon-interest.jpg" alt = "paragraph picture">
+<br>
+<img src = "http://brothert.net/dryoar/images/littlecolorado.jpg" alt = "other paragaph picture">
+<h1> We run Whitewater for the Rush </h1>
+<p>
+That doesn't mean we don't also like rapids. Opposites in all things after all. We believe that that tenseness that comes when 
+you are looking down the tongue of a big string of waves makes you appreciate the calm beautiful water that always follows even more.
+</p>
+
+<h1> Come with Us  </h1>
+<p>
+We invite you to come relax with us on one of the amazing rivers we visit. 
+Check out our trips and let us know which one best suits you. We're waiting to hear from you!
+</p>
+<p>&copy; 2016 Dry Oar || Maggie Klinke </p>
 </body>
 </html>
