--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<img src="/Users/maggieklinke/Documents/College/Idaho/Fall 2016/WDD 100/template.png" alt="logo" height="100" width="115">
+<img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="logo" height="100" width="115">
 <ul> 
 <li> Home </li>
 <li> Rivers </li>
