--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 <li> Rates/Dates </li>
 <li> Contact Us </li>
 </ul>
-<img src = "http://brothert.net/dryoar/images/river-narrow.jpg" alt = "header image">
+<img src = "http://brothert.net/dryoar/images/river-narrow.jpg" alt = "header image" height ="250" width = "940" >
 <h1> We run Rivers to relax </h1>
 <p>
 We believe that there is nothing like a river trip for relaxing. That is why we subscribe to the dry oar philosophy of boating.
 Keeping your oars dry for us means taking time to look around and notice the beauty that surrounds the rivers we love.
 </p>
 <img src = "http://brothert.net/dryoar/images/salmon-interest.jpg" alt = "paragraph picture">
-<br>
 <img src = "http://brothert.net/dryoar/images/littlecolorado.jpg" alt = "other paragaph picture">
 <h1> We run Whitewater for the Rush </h1>
 <p>
