--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ you are looking down the tongue of a big string of waves makes you appreciate th
 We invite you to come relax with us on one of the amazing rivers we visit. 
 Check out our trips and let us know which one best suits you. We're waiting to hear from you!
 </p>
+<footer>
 <p>&copy; 2016 Dry Oar || Maggie Klinke </p>
+</footer>
 </body>
 </html>
