--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype HTML>
-<html>
+<html lang="en-us">
 <head>
 <meta charset="utf-8">
 <title> Whitewater Rafting Vacations | Dry Oar Boating | Home </title>
@@ -21,8 +21,8 @@
 We believe that there is nothing like a river trip for relaxing. That is why we subscribe to the dry oar philosophy of boating.
 Keeping your oars dry for us means taking time to look around and notice the beauty that surrounds the rivers we love.
 </p>
-<img src = "http://brothert.net/dryoar/images/salmon-interest.jpg" alt = "paragraph picture" height = "315 " width = " 420" >
-<img src = "http://brothert.net/dryoar/images/littlecolorado.jpg" alt = "other paragaph picture"  height = "315 " width = " 420">
+<img src = "http://brothert.net/dryoar/images/salmon-interest.jpg" alt = "paragraph picture" height = "315" width = "420" >
+<img src = "http://brothert.net/dryoar/images/littlecolorado.jpg" alt = "other paragaph picture"  height = "315" width = "420">
 <h1> We run Whitewater for the Rush </h1>
 <p>
 That doesn't mean we don't also like rapids. Opposites in all things after all. We believe that that tenseness that comes when 
