--- a/index.html
+++ b/index.html
@@ -3,37 +3,69 @@
 <head>
 <meta charset="utf-8">
 <title> Whitewater Rafting Vacations | Dry Oar Boating | Home </title>
+<style>
+	nav
+	{	
+	background-color: #93A537;
+    color: #294F6D;
+	}
+    #section2 
+    {
+        background-color: #93A537;
+    }
+    h1,h2,h3,h4,h5,h6
+    {
+        color: #71266E;
+    }
+    #p2
+    {
+        color: #294F6D;
+    }
+	
+</style>
 </head>
 <body>
 
 <img src="template.png" alt="logo" height="100" width="115">
-<ul> 
-<li> Home </li>
-<li> Rivers </li>
-<li> FAQ </li>
-<li> Blog </li>
-<li> Rates/Dates </li>
-<li> Contact Us </li>
-</ul>
-<img src = "http://brothert.net/dryoar/images/river-narrow.jpg" alt = "header image" height ="250" width = "940" >
-<h1> We run Rivers to relax </h1>
-<p>
-We believe that there is nothing like a river trip for relaxing. That is why we subscribe to the dry oar philosophy of boating.
-Keeping your oars dry for us means taking time to look around and notice the beauty that surrounds the rivers we love.
-</p>
-<img src = "http://brothert.net/dryoar/images/salmon-interest.jpg" alt = "paragraph picture" height = "315" width = "420" >
-<img src = "http://brothert.net/dryoar/images/littlecolorado.jpg" alt = "other paragaph picture"  height = "315" width = "420">
-<h1> We run Whitewater for the Rush </h1>
-<p>
-That doesn't mean we don't also like rapids. Opposites in all things after all. We believe that that tenseness that comes when 
-you are looking down the tongue of a big string of waves makes you appreciate the calm beautiful water that always follows even more.
-</p>
 
+<nav>
+	<ul> 
+		<li> Home </li>
+		<li> Rivers </li>
+		<li> FAQ </li>
+		<li> Blog </li>
+		<li> Rates/Dates </li>
+		<li> Contact Us </li>
+	</ul>
+</nav>
+
+<img src = "http://brothert.net/dryoar/images/river-narrow.jpg" alt = "header image" height ="250" width = "940" >
+<section id = "section1">
+	<h1> We run Rivers to relax </h1>
+		<p>
+			We believe that there is nothing like a river trip for relaxing. That is why we subscribe to the dry oar philosophy of boating.
+			Keeping your oars dry for us means taking time to look around and notice the beauty that surrounds the rivers we love.
+		</p>
+	<img src = "http://brothert.net/dryoar/images/salmon-interest.jpg" alt = "paragraph picture" height = "315" width = "420" >
+</section>
+<br>
+<section id = "section2">
+	<img src = "http://brothert.net/dryoar/images/littlecolorado.jpg" alt = "other paragaph picture"  height = "315" width = "420">
+	<h1> We run Whitewater for the Rush </h1>
+		<p id = "p2">				
+			That doesn't mean we don't also like rapids. Opposites in all things after all. We believe that that tenseness that comes when 
+			you are looking down the tongue of a big string of waves makes you appreciate the calm beautiful water that always follows even more.
+		</p>
+</section>
+
+<section id = "section3">
 <h1> Come with Us  </h1>
 <p>
 We invite you to come relax with us on one of the amazing rivers we visit. 
 Check out our trips and let us know which one best suits you. We're waiting to hear from you!
 </p>
+</section>
+
 <footer>
 <p>&copy; 2016 Dry Oar || Maggie Klinke </p>
 </footer>
