--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             color: #294F6D;
         }
         
-        #section1 {}
+        #section1 {
+           width:60%; 
+        }
         
         #section2 {
             background-color: #93A537;
