--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <header id="headerpic">
-            <img src="http://brothert.net/dryoar/images/river-narrow.jpg" alt="header image" height="250" width="940">
+            <img src="headpic.jpeg" alt="header image" height="250" width="960">
         </header>
 
 
