--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">Rivers</a></li>
                 <li><a href="index.html"> FAQ</a> </li>
-                <li><a href="index.html"> Rates/Dates</a> </li>
+                <li><a href="Ratesdates.html"> Rates/Dates</a> </li>
                 <li><a href="index.html"> Contact Us</a> </li>
             </ul>
         </nav>
@@ -65,10 +65,10 @@
 
 
         <footer id="footer1">
-            <p>&copy; 2016 Dry Oar || Maggie Klinke </p>
-            <a href="https://facebook.com"> <img src="facebook.png" alt="facebook"></a>
-            <a href="https://instagram.com"> <img src="instagram.png" alt="instagram"></a>
-            <a href="https://www.youtube.com"> <img src="youtube.png" alt="youtube"></a>
+            <a href="https://facebook.com"> <img src="facebook.png" alt="facebook" id="facebook"></a>
+            <a href="https://instagram.com"> <img src="instagram.png" alt="instagram" id="instagram"></a>
+            <a href="https://www.youtube.com"> <img src="youtube.png" alt="youtube" id="youtube"></a>
+            <p id="copyright">&copy; 2016 Dry Oar || Maggie Klinke </p>
         </footer>
 
     </div>
