--- a/Ratesdates.html
+++ b/Ratesdates.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Rivers</a></li>
+                <li><a href="rivers.html">Rivers</a></li>
                 <li><a href="index.html"> FAQ</a> </li>
                 <li><a href="Ratesdates.html"> Rates/Dates</a> </li>
                 <li><a href="index.html"> Contact Us</a> </li>
